css/index.css
:root {
  --contentwidth: 650px;
  /* @link https://utopia.fyi/type/calculator?c=320,18,1.2,1240,20,1.25,5,2,&s=0.75|0.5|0.25,1.5|2|3|4|6,s-l&g=s,l,xl,12 */
  --step--2: clamp(0.78rem, calc(0.77rem + 0.03vw), 0.8rem);
  --step--1: clamp(0.94rem, calc(0.92rem + 0.11vw), 1rem);
  --step-0: clamp(1.13rem, calc(1.08rem + 0.22vw), 1.25rem);
  --step-1: clamp(1.35rem, calc(1.28rem + 0.37vw), 1.56rem);
  --step-2: clamp(1.62rem, calc(1.5rem + 0.58vw), 1.95rem);
  --step-3: clamp(1.94rem, calc(1.77rem + 0.87vw), 2.44rem);
  --step-4: clamp(2.33rem, calc(2.08rem + 1.25vw), 3.05rem);
  --step-5: clamp(2.8rem, calc(2.45rem + 1.77vw), 3.82rem);
  --pink: #f9968b;
  --red: #f27348;
  --gray: #26474e;
  --blue: #76cdcd;
  --teal: #2cced2;
  --gutter: 1.5em;
  --color-emphasis: var(--red);
  --color-accent: var(--teal);
  --color-decoration: var(--teal);
  --l: 50%; /*the initial lightness*/
  --color-secondary: var(--blue);
}

header {
  padding: var(--gutter);
  display: flex;
  justify-content: space-between;
}

time {
  font-style: italic;
  font-weight: 600;
}

.post-metadata {
  margin: 0;
  padding: 0;
  display: flex;
  margin-block-end: var(--step-1);
  list-style: none;
}

.post-metadata time {
  display: block;
  margin-right: var(--step-1);
}

.post-metadata .post-tag {
  margin-right: 1ch;
}

.post-metadata .post-tag:before {
  content: "#";
}

body {
  line-height: 1.7;
  color: #404040;
  font-family: "Spectral", Georgia, "Times New Roman", Times, serif;
  font-size: var(--step-0);
}

main {
  padding-inline-start: 1.5rem;
  padding-inline-end: 1.5rem;
  padding-bottom: 30vh;
  max-inline-size: var(--contentwidth);
  margin-inline: auto;
}

footer {
  border-top: 1px dashed var(--color-emphasis);
}

footer ul {
  list-style: none;
  margin: 0;
}

footer ul li {
  display: inline-block;
}

footer ul li + li {
  margin-inline-start: 0.5rem;
}

.footer-content {
  max-inline-size: var(--contentwidth);
  margin-inline: auto;
  padding-inline-start: 1.5rem;
  padding-inline-end: 1.5rem;
  padding-top: 1.5rem;
  padding-bottom: 1.5rem;
}

strong {
  font-weight: 600;
  color: var(--color-emphasis);
}

ul {
  margin: 0;
  margin-left: 2em;
  text-align: left;
  padding: 0;
}

hr {
  border: none;
  border-top: 1px dashed var(--color-accent);
}

ol {
  list-style: none;
}

h1 {
  color: var(--color-accent);
}

h1,
h2,
h3 {
  line-height: 1.2;
  letter-spacing: -1px;
  font-family: Arial, Helvetica, sans-serif;
}

h1,
h2 {
  clear: both;
}

h3 em {
  font-size: 0.8em;
  font-weight: 600;
}

h1 {
  font-size: var(--step-5);
}

h1 .emoji {
  margin-right: 0.5ch;
}

blockquote,
dl,
figcaption,
li,
p {
  max-width: 65ch;
  line-height: 1.7;
}

blockquote {
  border-inline-start: 0.2em solid;
  border-color: var(--color-decoration);
  font-style: italic;
  padding-inline-start: 1em;
}

h2 {
  font-size: var(--step-4);
}

a {
  color: currentColor;
  text-decoration-skip-ink: auto;
  text-decoration-color: var(--color-decoration);
  text-decoration-thickness: 2px;
  text-underline-offset: 0.2ex;
  transition: text-decoration-thickness 0.1s linear;
}

a:hover {
  text-decoration-thickness: 4px;
}

.home {
  font-size: var(--step-2);
  color: black;
}

.homepage ol {
  padding-left: 0;
}
.homepage h1 {
  margin: 0em 0;
}
.homepage h2 {
  margin: 1em 0;
  em {
    margin: 1em 0;
  }
}
.homepage h3 {
  border-bottom: 1px solid var(--color-emphasis);
}

li::marker {
  color: var(--color-emphasis);
}

em {
  color: var(--color-emphasis);
}

.table-of-contents ol {
  padding-left: 1em;
}

.flow {
  --flow-space: 1em;
}

.flow > * + * {
  margin-block-start: var(--flow-space, 1.5em);
}

.main-with-sidebar {
  display: flex;
  flex-wrap: wrap;
  gap: var(--gutter);
}

.main-with-sidebar > :first-child {
  flex-grow: 1;
  flex-basis: 50ch;
  margin-top: 2em;
}

.main-with-sidebar > :last-child {
  flex-basis: 0;
  flex-grow: 999;
  min-inline-size: 40%;
}

h2 {
  --flow-space: var(--step-3);
}

h3 {
  --flow-space: var(--step-2);
}

.book-left {
  float: left;
  width: 30%;
  margin-right: var(--gutter);
  margin-bottom: var(--gutter);
  /* The minimum margin is the width of the img plus it's right margin */
  /* We should position it to the left hand side of the screen */
  /* The maximum left margin is 0, essentially floating it normally */
  margin-left: clamp(
    calc(-30% - var(--gutter)),
    calc(-1 * ((100vw - 100%) / 2) + (2 * var(--gutter))),
    0px
  );
}

.book-right {
  float: right;
  width: 30%;
  margin-left: var(--gutter);
  margin-bottom: var(--gutter);
  margin-right: clamp(
    calc(-30% - var(--gutter)),
    calc(-1 * ((100vw - 100%) / 2) + (2 * var(--gutter))),
    0px
  );
}

.postlist {
  padding: 0;
}

.postlist-item > * + * {
  margin-inline-start: 0.5rem;
}

.postlist-item > time {
  font-size: var(--step--1);
}

figcaption {
  font-size: var(--step--1);
  color: var(--gray);
  font-style: italic;
  margin-left: 1em;
  line-height: 1.5;
}

nav {
  display: flex;
}

nav.site-menu ol {
  display: flex;
  gap: 0.5em;
  list-style-type: none;
  margin: 0;
  padding: 0;
}

